# teams-agent-accelerator-templates

./: .gitignore  README.md  frontmatter.json
.frontmatter/database/: mediaDb.json
.github/ISSUE_TEMPLATE/: new-template-request.md
.github/workflows/: nextjs.yml
data-analyst-agent/: package-lock.json  package.json  tsconfig.json
data-analyst-agent/appPackage/: manifest.json
data-analyst-agent/evals/: sql-eval.jsonl  sql-expert.ts  test.json
data-analyst-agent/src/: data-analyst.ts  index.ts  prompt.ts
docs/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
docs/app/: clarity.tsx  layout.tsx  page.tsx
docs/scripts/: samples.mjs
dotnet/A365TeamsAgent/: A365TeamsAgent.slnx  README.md  TUTORIAL.md
dotnet/AIBotWithOTel/: AIBotWithOTel.slnx  README.md
dotnet/DexAgent/: README.md
dotnet/OTelBotWithAspire/: OTelBotWithAspire.slnx  README.md
dotnet/dex-agent/: DexAgent.sln  DexBot.cs  GitHubPlugin.cs  GitHubService.cs  KernelOrchestrator.cs  Program.cs  README.md
js/coffee-agent/: README.md  package-lock.json  package.json
js/collaborator-agent/: .gitignore  README.md  package-lock.json  package.json  sample.env  teamsapp.local.yml  teamsapp.yml
js/data-analyst-agent-v2/: .gitignore  README.md  package-lock.json  package.json
python/: README.md  pyproject.toml
python/computer-use-agent/: README.md  pyproject.toml  sample.env
python/computer-use-agent/src/: bot.py  cards.py  config.py
python/computer-use-agent/src/cua/: cua_agent.py
python/computer-use-agent/src/cua/vnc/: vnc.py
(+230 files in other folders)
