[project]
name = "cua-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18,<4",
    "openai>=1.66.0",
    "playwright>=1.50.0",
    "python-dotenv>=1.0.1",
    "teams-ai>=1.8.1,<2",
    "vncdotool>=1.2.0",
]
